--- a/GetGuide/src/Components/Header.css
+++ b/GetGuide/src/Components/Header.css
@@ -47,7 +47,7 @@
     height: 60%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     /* background: red; */
     
 }
@@ -55,62 +55,18 @@
 .header-navlink{
     
     color: #BAF801;
-    padding: 0.4rem;
+    padding-bottom: 0.4rem;
     font-size: 12px;
+    border: 2px solid transparent;
 }
 
 .header-navlink:hover{
-    background: #BAF801;
-    color: #051A35;
+    border-bottom:2px dashed #BAF801;
+    color: #BAF801;
+    font-weight: 800;
+    box-sizing: border-box;
 }
-/* #video{
-    width: 100vw;
-    height: 50vh;
-    background: url('../assets/jerusalem.jpg')no-repeat center center/cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    position: relative;
-} */
 
-/* #black-div{
-   
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #051A35;
-    opacity: 0.6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-} */
-
-/* #header-text{
-    width: 50vw;
-    height: 20vh;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    position: absolute;
-    top: 10rem;
-    z-index: 1;
-    
-}
-#header-h1{
-    margin: 0;
-    font-family: 'Dancing Script', cursive;
-    font-size: 4rem;
-}
-#header-p{
-    font-size: 20px;
-    font-family: 'Source Code Pro', monospace;
-} */
 
 #outlet{
     width: 100vw;
