--- a/GetGuide/src/Pages/AdminDash.css
+++ b/GetGuide/src/Pages/AdminDash.css
@@ -1,19 +1,45 @@
 #form{
-    width: 10rem;
-    height: 30rem;
+    width: 50rem;
+    height: 20rem;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
 }
 
+#admin-page{
+    width: 100vw;
+    height: 100vh;
+    background: #051A35;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: flex-start;
+}
+
 
 .input-new-tour{
-    width: 20rem;
-    height: 5rem;
+    width: 55%;
+    height: 2rem;
+    background: #fff;
 }
 
 .text-area{
-    width: 20rem;
-    height: 30rem;
+    width: 55%;
+    height: 5rem;
+    background: #fff;
 }
+.tour-form-divs label{
+    width: fit-content;
+    margin-left: 3rem;
+    color: #BAF801;
+}
+.tour-form-divs{
+    width: 70%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: 0.5rem;
+}
+
