--- a/GetGuide/src/Components/TourComp/TourComponent.css
+++ b/GetGuide/src/Components/TourComp/TourComponent.css
@@ -23,6 +23,7 @@
     border-radius: 5px 5px 0 0;
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -53,4 +54,9 @@
 
 #hide-link{
     z-index: -1;
+    padding: 0.5rem 1rem;
+    background: #051A35;
+    color: #BAF801;
+    border-radius:15px;
+    /* margin-bottom: 2rem; */
 }
