--- a/GetGuide/src/Pages/Tours/TourPage.css
+++ b/GetGuide/src/Pages/Tours/TourPage.css
@@ -4,22 +4,52 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background:#051A35;
     color: aliceblue;
     overflow-y: scroll;
+    position: relative;
+    
+}
+
+#image-holder{
+    width: 100vw;
+
+}
+#header-image{
+    width: 100vw;
+    height: 40vh;
+    background: url('../../assets/jerusalem.jpg')no-repeat center center/cover;
+    position: fixed;
+    top: 0rem;
+    margin-top: 8vh;
+    
+}
+
+
+#tour-show-holder{
+    width: 100vw;
+    max-height: fit-content;
+    background:#051A35 ;
+    z-index: 5;
+    overflow-y: scroll;
+
+}
+#tour-show{
+    width: 60%;
+    height: 50vh;
+    margin: auto;
+    margin-top: 10rem;
+    /* background: #fff; */
+    /* color: #051A35; */
+    /* overflow-y: scroll; */
+    /* margin-top: -5rem; */
 }
 
 #show-image{
     width: 100%;
     height: 10rem;
     background: url('../../assets/test.jpg')no-repeat center center/cover;
-}
-#tour-show{
-    width: 60%;
-    height: 100vh;
-    margin: auto;
-    margin-top: 10rem;
-    
 }
