--- a/GetGuide/src/Pages/Tours/TourPage.css
+++ b/GetGuide/src/Pages/Tours/TourPage.css
@@ -9,43 +9,56 @@
     justify-content: center;
     background:#051A35;
     color: aliceblue;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     position: relative;
     
 }
-
 #image-holder{
-    width: 100vw;
-
+    height: 50vh;
+    position: sticky;
+    top: 0rem;
+ 
 }
+#tour-page section{
+    position: sticky;
+    top: 0;
+   
+}
+
 #header-image{
     width: 100vw;
-    height: 40vh;
-    background: url('../../assets/jerusalem.jpg')no-repeat center center/cover;
-    position: fixed;
+    height: 100vh;
+    /* background: url('../../assets/jerusalem.jpg')no-repeat center center/cover; */
+    /* position: fixed; */
     top: 0rem;
     margin-top: 8vh;
     
 }
 
+#myImage{
+    width: 100vw;
+    height: 50vh;
+}
 
 #tour-show-holder{
     width: 100vw;
-    max-height: fit-content;
+    height: fit-content;
+    height: fit-content;
     background:#051A35 ;
-    z-index: 5;
-    overflow-y: scroll;
+    margin-top: 10rem;
+    /* z-index: 5; */
+    /* overflow-y: scroll; */
 
 }
 #tour-show{
     width: 60%;
-    height: 50vh;
+    height: 100vh;
     margin: auto;
-    margin-top: 10rem;
-    /* background: #fff; */
-    /* color: #051A35; */
-    /* overflow-y: scroll; */
-    /* margin-top: -5rem; */
+    margin-top: -5rem;
+    background: #051A35;
+    box-sizing: border-box;
+    padding: 2rem 5rem 5rem;
+   
 }
 
 #show-image{
