--- a/GetGuide/src/Pages/Tours/TourPage.css
+++ b/GetGuide/src/Pages/Tours/TourPage.css
@@ -42,27 +42,60 @@
 
 #tour-show-holder{
     width: 100vw;
-    height: fit-content;
-    height: fit-content;
+    height: max-content;
     background:#051A35 ;
-    margin-top: 10rem;
+    margin-top: 60rem;
     /* z-index: 5; */
     /* overflow-y: scroll; */
 
 }
 #tour-show{
-    width: 60%;
-    height: 100vh;
-    margin: auto;
-    margin-top: -5rem;
-    background: #051A35;
+    width: 50%;    
+    margin-top: -2rem;
+    background: #044883;
+    /* background: #fff; */
     box-sizing: border-box;
     padding: 2rem 5rem 5rem;
-   
+    border-radius: 10px;
+    box-shadow: rgba(247, 243, 243, 0.673) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    position: relative;
 }
 
 #show-image{
     width: 100%;
     height: 10rem;
     background: url('../../assets/test.jpg')no-repeat center center/cover;
+}
+
+
+#tour-sites{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+
+#site-holder{
+    width: 30%;
+
+}
+
+
+#divider{
+    width: 100vw;
+    height: fit-content;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+}
+
+#form-holder{
+    width: fit-content;
+    height: 25rem;
+    position: sticky;
+    right: 8rem;
+    bottom: 5rem;
 }
