--- a/GetGuide/src/Components/Header.css
+++ b/GetGuide/src/Components/Header.css
@@ -31,9 +31,10 @@
     padding: 0.4rem 0;
 }
 #header-bar{
-    width: 100vw;
+    width: fit-content;
     height: 8vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     background: #051A35;
@@ -44,14 +45,31 @@
     z-index: 2;
 }
 
+
+#header-bar-menu{
+    width: 100vw;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 #header-menu{
-    width: 15vw;
+    width: fit-content;
     height: 60%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     /* background: red; */
     
+}
+
+#welcome-user{
+    /* width: 100vw; */
+    height: fit-content;
+    display: flex;
+    justify-content: flex-end;
+
 }
 
 .header-navlink{
