--- a/GetGuide/src/Components/Header.css
+++ b/GetGuide/src/Components/Header.css
@@ -31,18 +31,32 @@
     padding: 0.4rem 0;
 }
 #header-bar{
-    width: fit-content;
+    width: 100vw;
     height: 8vh;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     background: #051A35;
     color: #BAF801;
     font-family: 'Ubuntu', sans-serif;
     position: fixed;
     top: 0;
     z-index: 2;
+}
+
+#header-logo-div,
+#welcome-user-div {
+    width: 30vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#header-menu-div{
+    width: 40vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -56,7 +70,7 @@
 
 #header-menu{
     width: fit-content;
-    height: 60%;
+    /* height: 60%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -64,16 +78,21 @@
     
 }
 
-#welcome-user{
-    /* width: 100vw; */
-    height: fit-content;
-    display: flex;
-    justify-content: flex-end;
+#welcome-user-div{
+    
+    font-size: 12px;
+    flex-wrap: nowrap;
+}
 
+#name-holder{
+    /* width: 100%; */
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
 }
 
 .header-navlink{
-    
+    margin: 0 1rem;
     color: #BAF801;
     padding-bottom: 0.4rem;
     padding-top: 0.4rem;
