--- a/GetGuide/src/Components/Header.css
+++ b/GetGuide/src/Components/Header.css
@@ -8,6 +8,8 @@
 /* Header p */
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 #main-container{
     width: 100vw;
     height: 100vh;
@@ -29,6 +31,11 @@
 } */
 #header-logo{
     padding: 0.4rem 0;
+    background: rgb(216,198,144);
+background: linear-gradient(27deg, rgba(216,198,144,1) 0%, rgba(231,217,84,1) 21%, rgba(190,158,68,1) 31%, rgba(231,217,84,1) 46%, rgba(203,178,106,1) 55%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Monoton', cursive;
 }
 #header-bar{
     width: 100vw;
@@ -37,7 +44,8 @@
     /* flex-direction: column; */
     align-items: center;
     justify-content: center;
-    background: #051A35;
+    background: rgb(59,66,93);
+    background: linear-gradient(27deg, rgba(59,66,93,1) 40%, rgba(78,85,123,1) 100%, rgba(255,255,255,1) 100%);
     color: #BAF801;
     font-family: 'Ubuntu', sans-serif;
     position: fixed;
@@ -82,6 +90,10 @@
     
     font-size: 12px;
     flex-wrap: nowrap;
+    background: rgb(203,178,106);
+    background: linear-gradient(172deg, rgba(203,178,106,1) 9%, rgba(236,249,30,1) 19%, rgba(203,178,106,1) 38%, rgba(240,229,7,1) 47%, rgba(203,178,106,1) 66%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #name-holder{
@@ -93,18 +105,19 @@
 
 .header-navlink{
     margin: 0 1rem;
-    color: #BAF801;
     padding-bottom: 0.4rem;
     padding-top: 0.4rem;
-
     font-size: 12px;
-    
     border: 2px solid transparent;
+    background: rgb(203,178,106);
+    background: linear-gradient(172deg, rgba(203,178,106,1) 9%, rgba(236,249,30,1) 19%, rgba(203,178,106,1) 38%, rgba(240,229,7,1) 47%, rgba(203,178,106,1) 66%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .header-navlink:hover{
-    border-bottom:2px solid #BAF801;
-    color: #BAF801;
+    border-bottom:2px solid rgb(216,198,144);
+    /* color: #BAF801; */
     font-weight: 800;
     box-sizing: border-box;
 }
@@ -120,5 +133,6 @@
     justify-content: center;
     position: relative;
     top: 0;
-    background: rebeccapurple;
+    background: rgb(78,85,123);
+background: linear-gradient(27deg, rgba(78,85,123,1) 0%, rgba(248,248,255,1) 43%, rgba(59,66,93,1) 99%);
 }
