--- a/GetGuide/src/Pages/Dashboards/UserDashBoard/TouristDashboard.css
+++ b/GetGuide/src/Pages/Dashboards/UserDashBoard/TouristDashboard.css
@@ -50,3 +50,10 @@
 .side-menu-links:active{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
+
+
+#TouristDashboard-outlet{
+    width: 100%;
+    height: 95vh;
+    background: red;
+}
