--- a/GetGuide/src/Pages/Tours/TourPage.css
+++ b/GetGuide/src/Pages/Tours/TourPage.css
@@ -1,149 +1,28 @@
-/* #tour-page {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: baseline;
-  background: #051a35;
-  color: aliceblue;
-}
-
-#tour-show-holder {
-  width: 100vw;
-  margin-top: 60rem;
-  background: #304352;
-  background: -webkit-linear-gradient(
-    to top,
-    #d7d2cc,
-    #304352
-  ); 
-  background: linear-gradient(
-    to top,
-    #d7d2cc,
-    #304352
-  ); 
-}
-
-#tour-show {
-  width: 50vw;
-  min-height: 90vh;
-  
-  color: #304352;
-
-  box-sizing: border-box;
-  padding: 2rem 5rem 5rem;
-  border-radius: 10px;
-  box-shadow: rgba(247, 243, 243, 0.673) 0px 3px 6px,
-    rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  position: relative;
-  margin: auto;
-  background: #304352; 
-  background: -webkit-linear-gradient(
-    to right,
-    #d7d2cc,
-    #304352
-  ); 
-  background: linear-gradient(
-    to right,
-    #d7d2cc,
-    #304352
-  );
-}
-
-#show-image {
-  width: 100%;
-  height: 10rem;
-  background: url("../../assets/test.jpg") no-repeat center center/cover;
-}
-
-#tour-sites {
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-evenly;
-}
-
-#site-holder {
-  width: 30%;
-}
-
 #divider {
-  width: 100vw;
-  
-  display: flex;
-  
-  justify-content: center;
-
-}
-
-#form-holder {
-  width: 25vw;
-  height: 92%;
-  position: sticky;
-  top: 10%;
-  right: 2rem;
-}
-
-#control-btns {
-  width: 15vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  position: sticky;
-  top: 10%;
-  left: 0rem;
-  box-sizing: border-box;
-  padding: 2rem;
-}
-
-.control-btns-link {
-  width: max-content;
-  padding: 0.5rem;
-  background: grey;
-  border-radius: 15px;
-  color: aliceblue;
-  margin: 1rem;
-}
-
-.control-btns-link:hover {
-  background: #baf801;
-  color: #051a35;
-} */
-
-
-
-#divider{
   width: 90vw;
-  /* min-height: 90vh; */
   display: flex;
   align-items: flex-start;
   gap: 3rem;
   margin-top: 10rem;
-  background: red;
+  background: rgb(78,85,123);
+background: linear-gradient(27deg, rgba(78,85,123,1) 0%, rgba(248,248,255,1) 43%, rgba(59,66,93,1) 99%);
 }
 
-#control-btns{
+#control-btns {
   width: fit-content;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  /* position: sticky; */
-  /* top: 10%;
-  left: 0rem; */
   box-sizing: border-box;
   padding: 2rem;
-  /* background: red; */
+  margin: auto;
 }
 
-.control-btns-link{
-  width:10rem;
+.control-btns-link {
+  width: 10rem;
   padding: 0.5rem;
-  background: #051A35;
+  background: #051a35;
   border-radius: 15px;
   color: aliceblue;
   margin: 1rem;
@@ -155,22 +34,19 @@
   color: #051a35;
 }
 
-
-#tour-show{
+#tour-show {
   width: 50%;
   min-height: 90vh;
-  color: #304352;
+  color: #3a415c;
   box-sizing: border-box;
-  background: #304352;
-  
- 
+  background: rgb(78,85,123);
+  background: linear-gradient(27deg, rgba(78,85,123,1) 0%, rgba(248,248,255,1) 90%, rgba(59,66,93,1) 99%);
 }
 
-#tour-view{
+#tour-view {
   width: 80%;
   min-height: 90vh;
-  color: #fff;
+  color: #3a415c;
   box-sizing: border-box;
-padding: 2rem;
-  /* overflow-y: scroll; */
+  padding: 2rem;
 }
