--- a/GetGuide/src/Components/auctions/AuctionComp.css
+++ b/GetGuide/src/Components/auctions/AuctionComp.css
@@ -7,9 +7,9 @@
     display: flex;
     align-items: center;
     margin: 0.5rem;
-    /* background: #ffffff; */
-    background: rgb(78,85,123);
-    background: linear-gradient(0deg, rgba(78,85,123,1) 0%, rgba(255,255,255,1) 100%);
+    background: #CECEE6;
+    /* background: rgb(78,85,123);
+    background: linear-gradient(0deg, rgba(78,85,123,1) 0%, rgba(255,255,255,1) 100%); */
 }
 
 #auction-box-tourinfo{
