--- a/GetGuide/src/Pages/Dashboards/UserDashBoard/UserOpenAuctions.css
+++ b/GetGuide/src/Pages/Dashboards/UserDashBoard/UserOpenAuctions.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #cecee6;
+    background: #fff;
     /* background: rgb(78,85,123);
   background: linear-gradient(27deg, rgba(78,85,123,1) 0%, rgba(248,248,255,1) 90%, rgba(59,66,93,1) 99%); */
 }
