--- a/GetGuide/src/Pages/AuctionPage/AuctionPage.css
+++ b/GetGuide/src/Pages/AuctionPage/AuctionPage.css
@@ -1,32 +1,89 @@
 #auction-page{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: white;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 #auctionpage-aucinfo{
     width: 50vw;
-    height: 20vh;
-    background: rebeccapurple;
+    height: 50;
+    background: rgb(78,85,123);
+background: linear-gradient(27deg, rgba(78,85,123,1) 0%, rgba(248,248,255,1) 43%, rgba(59,66,93,1) 99%);
+box-sizing: border-box;
+padding: 1rem;
+border-radius: 10px;
+margin-top: 5rem;
+
 }
 
 #bids-container{
     width: 50vw;
-    height: 30vh;
-    background: green;
+    height: 50vh;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     justify-content: space-around;
+    background: #4e577b;
+    background: linear-gradient(27deg, rgba(78,85,123,1) 0%, rgba(248,248,255,1) 43%, rgba(59,66,93,1) 99%);
+    /* background: linear-gradient(27deg,rgba(59,66,93,1) 40% , rgba(248,248,255,1) 43%,  rgba(78,85,123,1) 50%); */
+    
 }
 
 #realtime-auction{
-    width: 50%;
-    height: 30%;
-    background: red;
+    width: 60%;
+    height: 80%;
+    background: rgb(78,85,123);
+
+    overflow-y: scroll;
+    box-sizing: border-box;
+    padding: 1rem;
+    border-radius: 15px;
+    color: #fff;
+    
 }
+
+#realtime-auction::-webkit-scrollbar{
+    display: none;
+  }
+
+  /* #auction-info tr{
+    width: 100%;
+  } */
+
+   /* #auction-info td{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  } */
+
+  #newest-bid{
+    color: rgb(224, 224, 29);
+  }
+
+  #bid-controller{
+    width: 10rem;
+    display: flex;
+  }
+
+  #bid-controller input{
+    width: 70%;
+    border-radius: 10px 0 0 10px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    padding: 1rem;
+  }
+
+  #bid-controller button{
+    /* width: 30%; */
+    border-radius: 0px 10px 10px 0px;
+  }
+
+  .info-table{
+    display: inline;
+  }
