--- a/GetGuide/src/Pages/Dashboards/UserDashBoard/TouristDashboard.css
+++ b/GetGuide/src/Pages/Dashboards/UserDashBoard/TouristDashboard.css
@@ -13,7 +13,8 @@
 #TouristDashboard-side-menu{
     width: 15%;
     height: 100vh;
-    background: rebeccapurple;
+    background: rgb(59,66,93);
+    background: linear-gradient(27deg, rgba(59,66,93,1) 40%, rgba(78,85,123,1) 100%, rgba(255,255,255,1) 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
