--- a/GetGuide/src/Pages/Tours/ToursPerCity.css
+++ b/GetGuide/src/Pages/Tours/ToursPerCity.css
@@ -9,12 +9,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-sizing: border-box;
+    padding-top:6rem ;
 }
 
 #tours-per-city-show{
-    width: 50%;
-    height: 100%;
-    margin-top: 10rem;
+    width: 70vw;
+    height: 88vh;
+    /* margin-top: 50rem; */
     display: flex;
     flex-wrap: wrap;
+    /* background: red; */
+    align-items: center;
+    justify-content: center;
+    overflow-y: scroll;
+    box-sizing: border-box;
 }
