--- a/GetGuide/src/Components/auctions/AuctionComp.css
+++ b/GetGuide/src/Components/auctions/AuctionComp.css
@@ -14,10 +14,14 @@
 }
 
 #auction-box-tourinfo{
-    width: 70%;
+    width: 50%;
     padding: 2rem;
 }
-
+#winner-container{
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+}
 #auction-box-btns{
     width: 30%;
     height: 80%;
