--- a/GetGuide/src/Pages/HomePage.css
+++ b/GetGuide/src/Pages/HomePage.css
@@ -88,3 +88,20 @@
     background: linear-gradient(172deg, rgba(203,178,106,1) 9%, rgba(236,249,30,1) 19%, rgba(203,178,106,1) 38%, rgba(240,229,7,1) 47%, rgba(203,178,106,1) 66%);
     color: rgb(59,66,93,1);
 }
+
+
+@media only screen and (max-width: 800px) {
+
+    #header-h1{
+        width: 150%;
+        font-size: 2.5rem;
+        text-align: center;
+    }
+    #header-p{
+        width: 180%;
+        font-size: 1rem;
+        text-align: center;
+    }
+
+
+}
