--- a/GetGuide/src/Pages/Tours/ToursPerCity.css
+++ b/GetGuide/src/Pages/Tours/ToursPerCity.css
@@ -5,7 +5,7 @@
     width: 100vw;
     height: 100vh;
     overflow-y: scroll;
-    background: #051A35;
+    /* background: #051A35; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,7 +15,7 @@
 
 #tours-per-city-show{
     width: 70vw;
-    height: 88vh;
+    height: 80vh;
     /* margin-top: 50rem; */
     display: flex;
     flex-wrap: wrap;
@@ -24,4 +24,14 @@
     justify-content: center;
     overflow-y: scroll;
     box-sizing: border-box;
+}
+
+
+@media only screen and (max-width: 800px){
+
+    #tours-per-city-show{
+        width: 100vw;
+    }
+
+
 }
