--- a/GetGuide/src/Components/Languages/LangSelect.css
+++ b/GetGuide/src/Components/Languages/LangSelect.css
@@ -13,9 +13,9 @@
     
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 800px){
     #select-lang{
-        width: 8rem;
+        width: 100%;
         height: rem;
         font-size: 12px;
     }
