--- a/GetGuide/src/Components/PopUp/Modal.css
+++ b/GetGuide/src/Components/PopUp/Modal.css
@@ -79,3 +79,28 @@
     box-sizing: border-box;
     color: #333;
 }
+
+
+@media only screen and (max-width: 800px){
+
+    #modal{
+        width: 20rem;
+        box-sizing: border-box;
+        padding: 1rem;
+    }
+    #tour-auction-info{
+        width: 17rem;
+        /* background: red; */
+        margin: auto;
+    }
+    #date-picker{
+        width: 70%;
+    }
+    #modal-lang-div{
+        background: green;
+    }
+
+    #desired-price{
+        width: 100%;
+    }
+}
