--- a/GetGuide/src/Components/auctions/AuctionComp.css
+++ b/GetGuide/src/Components/auctions/AuctionComp.css
@@ -108,3 +108,36 @@
 .auction-btn:active {
   transform: translateY(1px);
 }
+
+
+@media only screen and (max-width: 800px){
+
+    #auction-box{
+        width: 90vw;
+        height: fit-content;
+        flex-direction: column;
+        box-sizing: border-box;
+        
+    }
+    
+    #auction-box-btns{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        padding: 0.5rem;
+    }
+    .auction-btn{
+        width: fit-content;
+        font-size: 1rem;
+      
+    }
+
+    #auction-box p{
+        font-size: 15px;
+    }
+
+    #auction-box-tourinfo{
+        width: 90%;
+    }
+}
