--- a/GetGuide/src/Pages/Dashboards/UserDashBoard/UserOpenAuctions.css
+++ b/GetGuide/src/Pages/Dashboards/UserDashBoard/UserOpenAuctions.css
@@ -1,5 +1,5 @@
 #user-open-auctions{
-    width: 100%;
+    width: 88vw;
     min-width: 50vw;
     height: 100vh;
     display: flex;
@@ -7,13 +7,13 @@
     align-items: center;
     justify-content: center;
     background: #fff;
+    box-sizing: border-box;
     /* background: rgb(78,85,123);
   background: linear-gradient(27deg, rgba(78,85,123,1) 0%, rgba(248,248,255,1) 90%, rgba(59,66,93,1) 99%); */
 }
 
 #auctions-container{
-    width: 100%;
-    
+    width: 99%;
     height: 95%;
     padding: 5rem;
     box-sizing: border-box;
@@ -21,4 +21,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+   
+}
+
+
+@media only screen and (max-width: 800px){
+  #user-open-auctions{
+    height: 88vh;
+  }
+  #auctions-container{
+    width: 100%;
+    height: 80vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
 }
