--- a/GetGuide/src/Components/auctions/AuctionComp.css
+++ b/GetGuide/src/Components/auctions/AuctionComp.css
@@ -6,6 +6,7 @@
     color: #000;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin: 0.5rem;
     margin-bottom: 2rem;
     background: #CECEE6;
