--- a/GetGuide/src/Components/TourComp/TourPerCityComp.css
+++ b/GetGuide/src/Components/TourComp/TourPerCityComp.css
@@ -31,6 +31,10 @@
     align-items: center;
     position: absolute;
     z-index: 2;
+    background: rgb(205, 219, 2);
+    background: linear-gradient(172deg, rgb(244, 236, 3) 9%, rgba(236,249,30,1) 19%, rgba(203,178,106,1) 38%, rgba(240,229,7,1) 47%, rgb(255, 251, 0) 66%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #city-info:hover{
