--- a/GetGuide/src/Pages/HomePage.css
+++ b/GetGuide/src/Pages/HomePage.css
@@ -60,7 +60,7 @@
 }
 #header-h1, #header-p{
     background: rgb(203,178,106);
-    background: linear-gradient(172deg, rgba(203,178,106,1) 9%, rgba(236,249,30,1) 19%, rgba(203,178,106,1) 38%, rgba(240,229,7,1) 47%, rgba(203,178,106,1) 66%);
+    background: linear-gradient(172deg, rgba(203,178,106,1) 9%, rgba(236,249,30,1) 19%, rgb(245, 249, 0) 38%, rgba(240,229,7,1) 47%, rgba(203,178,106,1) 66%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
