--- a/GetGuide/src/Pages/Tours/Tours.css
+++ b/GetGuide/src/Pages/Tours/Tours.css
@@ -4,8 +4,9 @@
     width: 100vw;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     /* flex-wrap: wrap; */
     overflow-y: scroll;
     background: #051A35;
@@ -14,7 +15,7 @@
 
 #tours-display{
     width:70%;
-    height: 80%;
+    height: 80vh;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
